# remi

./: Cargo.toml  LICENSE  README.md
examples/hello-world/: Cargo.toml
examples/hello-world/src/: main.rs
remi/: Cargo.toml
remi-core/: Cargo.toml
remi-core/src/: error.rs  lib.rs
remi-core/src/edge/: acceptor.rs  connection.rs  frame.rs  mod.rs
remi-core/src/ext/: acceptor.rs  mod.rs
remi-core/src/io/: acceptor.rs  connection.rs  mod.rs
remi-core/src/message/: codec.rs  mod.rs  request.rs  response.rs  streaming.rs
remi-core/src/message/channel/: duplix.rs  mod.rs  multi.rs  unary.rs
remi-core/src/message/request/: mod.rs
remi-core/src/server/: mod.rs  protocol.rs
remi-core/src/server/service/: mod.rs  streaming.rs  unary.rs
remi-rsocket/: Cargo.toml
remi-rsocket/src/: error.rs  lib.rs
remi-rsocket/src/codec/: frame.rs  mod.rs
remi-rsocket/src/conn/: mod.rs  stream.rs
remi-rsocket/src/conn/raw/: builder.rs  mod.rs  stream.rs
remi-rsocket/src/conn/tagged/: builder.rs  mod.rs  stream.rs
remi-rsocket/src/conn/util/: mod.rs  sink.rs
remi-rsocket/src/edge/: adapter.rs  mod.rs
remi-rsocket/src/edge/codec/: adapter.rs  mod.rs
remi-rsocket/src/edge/stream/: adapter.rs  codec.rs  frame.rs  mod.rs
remi-rsocket/src/instance/: mod.rs  service.rs
remi-rsocket/src/instance/io/: connection.rs  mod.rs  pipe.rs  stream.rs
remi-rsocket/src/instance/io/ext/: frame_sink_ext.rs  frame_stream_ext.rs  mod.rs
remi-rsocket/src/io/: connection.rs
remi-rsocket/src/request/: client_streaming.rs  mod.rs  server_streaming.rs  streaming.rs  unary.rs
remi-rsocket/src/server/: builder.rs  mod.rs  service.rs
remi-rsocket/src/server/stream/: builder.rs  mod.rs  service.rs
remi-rsocket/src/server/util/: setup.rs
remi-tcp/: Cargo.toml
remi-tcp/src/: acceptor.rs  connection.rs  lib.rs
remi-util/: Cargo.toml
remi-util/src/: lib.rs
remi-util/src/channel/: error.rs  mod.rs  unary.rs
remi-util/src/ext/: mod.rs
remi-util/src/ext/acceptor/: accept.rs  mod.rs
remi-util/src/framed/: layer.rs  service.rs  stream.rs
remi/src/: lib.rs  serve.rs
remi/src/util/: mod.rs
remi/src/util/framed/: layer.rs  mod.rs  service.rs  stream.rs
