[workspace]
members = ["remi-core", "remi", "remi-util", "remi-tcp", "remi-rsocket", "examples/*"]
resolver = "2"

[workspace.package]
edition = "2021"
authors = ["Ayman Al-Qadhi <alqd@protonmail.com>"]
repository = "https://github.com/real-evolution/remi"
license-file = "LICENSE"
readme = true
publish = true
