[package]
name = "remi-core"
version = "0.1.0"
description = "Modular Remote Procedure Call (RPC) framework"
keywords = ["rpc", "net", "microservice", "interconnect"]
edition.workspace = true
authors.workspace = true
readme.workspace = true
publish.workspace = true
repository.workspace = true
license-file.workspace = true

[dependencies]
anyhow = { version = "1" }
async-trait = { version = "0" }
thiserror = { version = "1" }
tokio = { version = "1", features = ["full"] }
