[package]
name = "remi-rsocket"
version = "0.1.0"
description = "`remi` framwrok rsocket proto layer"
keywords = ["rpc", "net", "microservice", "interconnect"]
edition.workspace = true
authors.workspace = true
readme.workspace = true
publish.workspace = true
repository.workspace = true
license-file.workspace = true

[dependencies]
# external dependencies
rsocket-proto = { path = "../../rsocket-proto" }

# project dependencies
remi-core = { path = "../remi-core" }
remi-util = { path = "../remi-util" }

# crate dependencies
bytes = { version = "1" }
futures = { version = "0" }
thiserror = { version = "1" }
tokio = { version = "1" }
tokio-util = { version = "0", features = ["codec"] }
tower = { version = "0" }
