[package]
name = "remi-tcp"
version = "0.1.0"
description = "`remi` framwrok TCP transport layer"
keywords = ["rpc", "net", "microservice", "interconnect"]
edition.workspace = true
authors.workspace = true
readme.workspace = true
publish.workspace = true
repository.workspace = true
license-file.workspace = true

[dependencies]
# project dependencies
remi = { path = "../remi" }
remi-core = { path = "../remi-core" }

# crate dependencies
pin-project = { version = "1" }
tokio = { version = "1", features = ["full"] }
