[package]
name = "remi"
version = "0.1.0"
description = "Modular Remote Procedure Call (RPC) framework"
keywords = ["rpc", "net", "microservice", "interconnect"]
edition.workspace = true
authors.workspace = true
readme.workspace = true
publish.workspace = true
repository.workspace = true
license-file.workspace = true

[dependencies]
# project dependencies
remi-core = { path = "../remi-core" }
