[package]
name = "remi"
version = "0.1.0"
description = "Modular Remote Procedure Call (RPC) framework"
keywords = ["rpc", "net", "microservice", "interconnect"]
edition.workspace = true
authors.workspace = true
readme.workspace = true
publish.workspace = true
repository.workspace = true
license-file.workspace = true

[dependencies]
# project dependencies
remi-core = { path = "../remi-core" }
remi-util = { path = "../remi-util" }

# crate dependencies
anyhow = { version = "1" }
derive-new = {version = "0" }
futures = { version = "0" }
tower = { version = "0", features = ["make"] }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0", features = ["codec"] }
