[package]
name = "hello-world"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
remi = { path = "../../remi" }
remi-tcp = { path = "../../remi-tcp" }
remi-rsocket = { path = "../../remi-rsocket" }
tokio = { version = "1", features = ["full"] }
tower = { version = "0", features = ["util"] }
